<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_editor_background_color"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card_view"
            style="@style/activity_editor_card_view">

            <ImageView
                android:id="@+id/product_image"
                style="@style/activity_editor_product_image" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_image_button"
            style="@style/activity_editor_choose_image_button" />

        <TextView
            android:id="@+id/stock_name_text_view"
            style="@style/activity_editor_label_attributes_styling"
            android:layout_below="@id/add_image_button"
            android:layout_marginTop="16dp"
            android:text="@string/stock_name" />

        <EditText
            android:id="@+id/product_name_edit_txt"
            style="@style/activity_editor_product_name"
            android:hint="@string/product_name" />

        <Button
            android:id="@+id/neg_qty_button"
            style="@style/activity_editor_increment_and_decrement_button"
            android:layout_alignParentStart="true"
            android:text="@string/subtract" />

        <EditText
            android:id="@+id/stock_qty_edit_txt"
            style="@style/activity_editor_stock_quantity"
            android:hint="@string/zero" />

        <Button
            android:id="@+id/pos_qty_button"
            style="@style/activity_editor_increment_and_decrement_button"
            android:layout_alignParentEnd="true"
            android:text="@string/add" />

        <TextView
            android:id="@+id/stock_price_text_view"
            style="@style/activity_editor_label_attributes_styling"
            android:layout_below="@+id/neg_qty_button"
            android:text="@string/stock_price" />

        <EditText
            android:id="@+id/stock_unit_price_edit_txt"
            style="@style/activity_editor_stock_unit_price"
            android:hint="@string/default_stock_unit_price" />

        <TextView
            android:id="@+id/supplier_details_label_text_view"
            style="@style/activity_editor_label_attributes_styling"
            android:layout_below="@+id/stock_unit_price_edit_txt"
            android:text="@string/supplier_details" />

        <EditText
            android:id="@+id/supplier_name_edit_txt"
            style="@style/activity_editor_supplier_name_and_phone"
            android:layout_below="@+id/supplier_details_label_text_view"
            android:hint="@string/supplier_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/supplier_phone_number_edit_txt"
            style="@style/activity_editor_supplier_name_and_phone"
            android:layout_below="@id/supplier_name_edit_txt"
            android:hint="@string/supplier_phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/order_button"

            style="@style/activity_editor_order_button" />

    </RelativeLayout>

</ScrollView>